--- a/.github/workflows/lowlighter.yml
+++ b/.github/workflows/lowlighter.yml
@@ -1,11 +1,13 @@
-# Visit https://github.com/lowlighter/metrics#-documentation for full reference
+---
 name: Metrics
 on:
-  # Schedule updates (each hour)
-  schedule: [{cron: "0 0 * * *"}]
-  # Lines below let you run workflow manually and on each commit
-  workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  schedule:
+    - cron: 0 0 * * *
+  workflow_dispatch: null
+  push:
+    branches:
+      - master
+      - main
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -14,17 +16,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
-
-          # Options
           user: MasterBrian99
           template: classic
           base: header, activity, community, repositories, metadata
@@ -83,9 +75,7 @@ jobs:
           plugin_wakatime_days: 7
           plugin_wakatime_limit: 5
           plugin_wakatime_repositories_visibility: all
-          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+          plugin_wakatime_sections: time, projects, projects-graphs, languages,
+            languages-graphs, editors, os
           plugin_wakatime_url: https://wakapi.dev
           plugin_wakatime_user: masterbr1an
-          plugin_people_limit: 8
-          plugin_people_size: 28
-          plugin_people_types: followers, following
